--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/privacy.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Privacy Policy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-
 <body>
   <nav class="navbar">
     <div class="navbar-container container">
@@ -39,45 +37,58 @@
       </div>
     </div>
   </nav>
-    <header>
-        <h1>Privacy Policy</h1>
-    </header>
-    <main>
-        <p>This Privacy Policy outlines our procedures for collecting, using, and disclosing your information when you use our services. It also explains your privacy rights and how we protect your data.</p>
+  <header>
+    <h1>Contact Us</h1>
+</header>
 
-        <h2>Collection and Use of Information</h2>
-        <p>We use your personal data to enhance and improve our services. By using our services, you agree to the terms of this Privacy Policy.</p>
+<div class="container">
+  <div class="innerwrap">
+  
+    <section class="section1 clearfix">
+      <div class="textcenter">
+        <span class="shtext">Contact Us</span>
+        <span class="seperator"></span>
+        <h1>Drop Us a Mail</h1>
+      </div>
+    </section>
+  
+    <section class="section2 clearfix">
+      <div class="col2 column1 first">
+        <div style="width: 100%"><iframe width="110%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ekpoma,%20Edo%20state%20nigeria+(Povor)&amp;t=k&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Calculate population in area</a></iframe></div>
+      </div>
+      <div class="col2 column2 last">
+        <div class="sec2innercont">
+          <div class="sec2addr">
+            <p>Ekpoma, Edo State, Nigeria.</p>
+            <p><span class="collig">Phone :</span><a style="color: black;" href="tel:+2347047480521"> +234 7047480521</a></p>
+            <p><span class="collig">Email :</span> <a style="color: black;"  href="mailto:godsfavouromokhomion47@gmail.com">godsfavouromokhomion47@gmail.com</a></p>
+            <p><span class="collig">whatsapp :</span><a style="color: black;"  href="tel:+234907516037">+234 907516037</a> </p>
+          </div>
+        </div>
+        <div class="sec2contactform">
+          <h3 class="sec2frmtitle">Want to Know More? Drop Us a Mail</h3>
+          <form action="">
+            <div class="clearfix">
+              <input class="col2 first" name="firstname" type="text" placeholder="FirstName">
+              <input class="col2 last" name lastname type="text" placeholder="LastName">
+            </div>
+            <div class="clearfix">
+              <input  class="col2 first" name="email" type="Email" placeholder="Email">
+              <input class="col2 last" name="number" type="text" placeholder="Contact Number">
+            </div>
+            <div class="clearfix">
+              <textarea name="textarea" name="message" id="" cols="30" rows="7">Your message here...</textarea>
+            </div>
+            <div class="clearfix"><input type="submit" value="Send"></div>
+          </form>
+        </div>
 
-        <h2>Collecting and Using Your Personal Data</h2>
-        <p>We collect personally identifiable information to provide and enhance our services. This includes:</p>
-        <ul>
-            <li>Email address</li>
-            <li>First and last name</li>
-            <li>Phone number</li>
-            <li>Address details</li>
-            <li>Usage Data</li>
-        </ul>
+      </div>
+    </section>
+  
+  </div>
+</div>
 
-        <h2>Usage Data</h2>
-        <p>Usage Data is collected automatically while using the service. It may include information such as IP address, browser type, pages visited, time spent, and more.</p>
-<!-- 
-        <h2>Information from Third-Party Social Media Services</h2>
-        <p>We allow account creation and login via Third-Party Social Media Services like Google, Facebook, Twitter, LinkedIn. We collect data associated with these accounts.</p> -->
-
-        <h2>Tracking Technologies and Cookies</h2>
-        <p>We use cookies and tracking technologies to gather information about your activity on our website. [Description of cookies used]</p>
-
-        <h2>Use of Your Personal Data</h2>
-        <p>We may use your Personal Data for:</p>
-        <ul>
-          <li>Providing and maintaining our service</li>
-          <li>Managing your account</li>
-          <li>Contractual obligations</li>
-          <li>Sending updates and information</li>
-          <li>Managing your requests</li>
-        </ul>
-
-    </main>
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-column">
@@ -101,6 +112,7 @@
           <ul class="footer-links">
             <!-- <li><a href="#">FAQ</a></li> -->
             <li><a href="conditions.html">Terms & Conditions</a></li>
+            
             <li><a href="privacy.html">Privacy</a></li>
           </ul>
         </div>
@@ -126,6 +138,5 @@
         <p class="footer-copy">&copy; Povor. All rights reserved.</p>
       </div>
     </footer>
-</body>
-
+  </body>
 </html>
