--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <li><a href="#home" class="a">Home</a></li>
             <li><a href="#about" class="b">About</a></li>
             <li><a href="#service" class="c">Services</a></li>
-            <!-- <li><a href="#testimonial" class="e">Testimonial</a></li> -->
+            <li><a href="testimonial.html" class="e">Testimonial</a></li>
             <div class="visit">
-              <li><a href="#contact" class="g">Contact</a></li>
-              <li><a href="#quote" class="f">Quote</a></li>
+              <li><a href="contact.html" class="g">Contact</a></li>
+              <li><a href="quote.html" class="f">Quote</a></li>
             </div>
           </div>
         </ul>
@@ -137,46 +137,28 @@
 
   <!-- Section Four - Testimonial Page -->
   <!-- <div class="section-four" id="testimonial">
+  </div>
 
-      </div> -->
-  <!-- Section Four - Contact Page -->
+<-- Section Five - partnership Page -->
+  <!-- <div class="section-four" id="partnership">
+    <h2>Forming lasting partnerships</h2>
+  </div> -->
+
+  <!-- Section six - Contact Page -->
   <section class="contact-section" id="contact">
-    <h2>Contact Us</h2>
     <div class="contact-content">
-      <div class="map">
-        <div class="mapouter">
-          <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas"
-              src="https://maps.google.com/maps?q=ekpoma edo state&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co"></a><br>
-            <style>
-              .mapouter {
-                position: relative;
-                text-align: right;
-                height: 100%;
-                width: 100%;
-              }
-            </style><a href="https://embedgooglemap.2yu.co/"></a>
-            <style>
-              .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 100%;
-                width: 100%;
-              }
-            </style>
-          </div>
-        </div>
-      </div>
-      <div class="contact-form">
-        <form>
-
-          <input type="text" id="name" placeholder="John Deo" name="name" required>
-
-          <input type="email" id="email" placeholder="example@gmail.com" name="email" required>
-
-          <textarea id="message" name="message" placeholder="Leave A Message" rows="4" required></textarea>
-          <input type="submit" class="btn" name="submit" value="SEND">
-        </form>
+        <h2>Let’s amplify your <br> brand together</h2>
+        <a href="contact.html">
+        <button class="cta">
+          <span>Get In Touch</span>
+          <svg viewBox="0 0 13 10" height="10px" width="15px">
+            <path d="M1,5 L11,5"></path>
+            <polyline points="8 1 12 5 8 9"></polyline>
+          </svg>
+        </button>
+      </a>
+      <div class="contact-img">
+        <img src="svg/contact-us-animate.svg" alt="">
       </div>
     </div>
   </section>
@@ -186,11 +168,11 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-column">
-       
+
         <div class="footer-img">
-           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, error?</p>
-        <img src="img/POVOR-removebg-preview.png" alt="">
-      </div>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, error?</p>
+          <img src="img/POVOR-removebg-preview.png" alt="">
+        </div>
       </div>
       <div class="footer-column">
         <h3 class="footer-title">Links</h3>
@@ -206,7 +188,6 @@
         <ul class="footer-links">
           <!-- <li><a href="#">FAQ</a></li> -->
           <li><a href="conditions.html">Terms & Conditions</a></li>
-          <li><a href="policy.html">Support Policy</a></li>
           <li><a href="privacy.html">Privacy</a></li>
         </ul>
       </div>
@@ -214,17 +195,29 @@
         <h3 class="footer-title">Follow Us</h3>
         <div class="wrapper">
           <div class="row">
-            <a href="#"><div class="bg-ico" id="facebook"><i class="fab fa-facebook social  facebook fa-3x"></i></div></a>
-            <a href="#"><div class="bg-ico" id="pinterest"><i class="fab fa-pinterest social  pinterest fa-3x"></i></div></a>
-            <a href="#"><div class="bg-ico" id="twitter"><i class="fab fa-twitter social  twitter fa-3x"></i></div></a>
+            <a href="#">
+              <div class="bg-ico" id="facebook"><i class="fab fa-facebook social  facebook fa-3x"></i></div>
+            </a>
+            <a href="#">
+              <div class="bg-ico" id="pinterest"><i class="fab fa-pinterest social  pinterest fa-3x"></i></div>
+            </a>
+            <a href="#">
+              <div class="bg-ico" id="twitter"><i class="fab fa-twitter social  twitter fa-3x"></i></div>
+            </a>
           </div>
           <div class="row">
-            <a href="#"><div class="bg-ico" id="instagram"><i class="fab fa-instagram social  instagram fa-3x"></i></div></a>
-            <a href="#"><div class="bg-ico" id="tumblr"><i class="fab fa-tumblr social  tumblr fa-3x"></i></div></a>
-            <a href="#"><div class="bg-ico" id="whatsapp"><i class="fab fa-whatsapp social  whatsapp fa-3x"></i></div></a>
+            <a href="#">
+              <div class="bg-ico" id="instagram"><i class="fab fa-instagram social  instagram fa-3x"></i></div>
+            </a>
+            <a href="#">
+              <div class="bg-ico" id="tumblr"><i class="fab fa-tumblr social  tumblr fa-3x"></i></div>
+            </a>
+            <a href="#">
+              <div class="bg-ico" id="whatsapp"><i class="fab fa-whatsapp social  whatsapp fa-3x"></i></div>
+            </a>
           </div>
         </div>
-        
+
       </div>
     </div>
 
@@ -232,9 +225,9 @@
       <p class="footer-copy">&copy; Povor. All rights reserved.</p>
     </div>
   </footer>
-  
 
-  
+
+
 
   </div>
   <script src="js/script.js"></script>
