--- a/testimonial.html
+++ b/testimonial.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/privacy.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Privacy Policy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Review</title>
+  <link rel="stylesheet" href="css/review.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-
 <body>
   <nav class="navbar">
     <div class="navbar-container container">
@@ -39,45 +37,60 @@
       </div>
     </div>
   </nav>
-    <header>
-        <h1>Privacy Policy</h1>
-    </header>
-    <main>
-        <p>This Privacy Policy outlines our procedures for collecting, using, and disclosing your information when you use our services. It also explains your privacy rights and how we protect your data.</p>
+  <header>
+    <h1>Costumers Review</h1>
+</header>
 
-        <h2>Collection and Use of Information</h2>
-        <p>We use your personal data to enhance and improve our services. By using our services, you agree to the terms of this Privacy Policy.</p>
+<!-- TESTIMONIALS -->
+<div class="slider">
 
-        <h2>Collecting and Using Your Personal Data</h2>
-        <p>We collect personally identifiable information to provide and enhance our services. This includes:</p>
-        <ul>
-            <li>Email address</li>
-            <li>First and last name</li>
-            <li>Phone number</li>
-            <li>Address details</li>
-            <li>Usage Data</li>
-        </ul>
+  <input type="radio" name="slider" title="slide1" checked="checked" class="slider-btn"/>
+  <input type="radio" name="slider" title="slide2" class="slider-btn"/>
+  <input type="radio" name="slider" title="slide3" class="slider-btn"/>
+  <input type="radio" name="slider" title="slide4" class="slider-btn"/>
 
-        <h2>Usage Data</h2>
-        <p>Usage Data is collected automatically while using the service. It may include information such as IP address, browser type, pages visited, time spent, and more.</p>
-<!-- 
-        <h2>Information from Third-Party Social Media Services</h2>
-        <p>We allow account creation and login via Third-Party Social Media Services like Google, Facebook, Twitter, LinkedIn. We collect data associated with these accounts.</p> -->
+  <div class="slider-inner">
+    <div class="slider-contents"><i class="slider-icon fa fa-desktop fa-3x"></i>
+      <h2 class="slider-caption">Web Design</h2>
+      <ul class="slider-text">
+        <li>UX/UI Design</li>
+        <li>Responsive Design</li>
+        <li>Mobile Design</li>
+        <li>Fluid Design</li>
+      </ul>
+    </div>
+    <div class="slider-contents"><i class="slider-icon fa fa-code fa-3x"></i>
+      <h2 class="slider-caption">Development</h2>
+      <ul class="slider-text">
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>SASS / SCSS</li>
+        <li>JavaScript / jQuery</li>
+      </ul>
+    </div>
+    <div class="slider-contents"><i class="slider-icon fa fa-rocket fa-3x"></i>
+      <h2 class="slider-caption">Branding</h2>
+      <ul class="slider-text">
+        <li>Corporate Identity</li>
+        <li>Logo Design</li>
+        <li>Brand Guidelines</li>
+        <li>Promotional Collateral</li>
+      </ul>
+    </div>
+    <div class="slider-contents"><i class="slider-icon fa fa-bullhorn fa-3x"></i>
+      <h2 class="slider-caption">Marketing</h2>
+      <ul class="slider-text">
+        <li>Direct Mail</li>
+        <li>Email Marketing</li>
+        <li>Landing Page Design</li>
+        <li>Marketing Automation</li>
+      </ul>
+    </div>
+  </div>
 
-        <h2>Tracking Technologies and Cookies</h2>
-        <p>We use cookies and tracking technologies to gather information about your activity on our website. [Description of cookies used]</p>
+</div>
+    <!-- END OF TESTIMONIALS -->
 
-        <h2>Use of Your Personal Data</h2>
-        <p>We may use your Personal Data for:</p>
-        <ul>
-          <li>Providing and maintaining our service</li>
-          <li>Managing your account</li>
-          <li>Contractual obligations</li>
-          <li>Sending updates and information</li>
-          <li>Managing your requests</li>
-        </ul>
-
-    </main>
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-column">
@@ -101,6 +114,7 @@
           <ul class="footer-links">
             <!-- <li><a href="#">FAQ</a></li> -->
             <li><a href="conditions.html">Terms & Conditions</a></li>
+            
             <li><a href="privacy.html">Privacy</a></li>
           </ul>
         </div>
@@ -126,6 +140,6 @@
         <p class="footer-copy">&copy; Povor. All rights reserved.</p>
       </div>
     </footer>
-</body>
-
+    <script src="js/review.js"></script>
+  </body>
 </html>
