--- a/testimonial.html
+++ b/testimonial.html
@@ -11,32 +11,12 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="navbar-container container">
-      <input type="checkbox" name="" id="" />
-      <div class="hamburger-lines">
-        <span class="line line1"></span>
-        <span class="line line2"></span>
-        <span class="line line3"></span>
-      </div>
-      <ul class="menu-items">
-        <div class="menu-items">
-          <li><a href="#home" class="a">Home</a></li>
-          <li><a href="#about" class="b">About</a></li>
-          <li><a href="#service" class="c">Services</a></li>
-          <li><a href="testimonial.html" class="e">Testimonial</a></li>
-          <div class="visit">
-            <li><a href="contact.html" class="g">Contact</a></li>
-            <li><a href="quote.html" class="f">Quote</a></li>
-          </div>
-        </div>
-      </ul>
-      <div class="logo">
-        <a href="index.html">
-          <img src="img/POVOR-removebg-preview.png" alt="unsplash image" style="width: 200px;" />
-        </a>
-      </div>
-    </div>
-  </nav>
+    <div class="logo">
+      <a href="index.html">
+        <img src="img/POVOR-removebg-preview.png" alt="unsplash image" style="width: 200px;" />
+      </a>
+  </div>
+</nav>
   <header>
     <h1>Costumers Review</h1>
 </header>
@@ -142,4 +122,37 @@
     </footer>
     <script src="js/review.js"></script>
   </body>
+
+  <div id="circularMenu" class="circular-menu">
+
+    <a class="floating-btn" onclick="document.getElementById('circularMenu').classList.toggle('active');">
+      <i class="fa fa-plus"></i>
+    </a>
+  
+    <menu class="items-wrapper">
+      <a href="#" class="menu-item fa fa-facebook"></a>
+      <a href="#" class="menu-item fa fa-twitter"></a>
+      <a href="#" class="menu-item fa fa-google-plus"></a>
+      <a href="#" class="menu-item fa fa-linkedin"></a>
+    </menu>
+  
+  </div>
+  
+  
+  <div id="circularMenu1" class="circular-menu circular-menu-left active">
+  
+    <a class="floating-btn" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
+      <i class="fa fa-bars"></i>
+    </a>
+  
+    <menu class="items-wrapper">
+      <a href="quote.html" class="menu-item fa fa-home"></a>
+      <a href="contact.html" class="menu-item fa fa-user"></a>
+      <a href="index.html#service" class="menu-item fa fa-pie-chart"></a>
+      <a href="index.html#about" class="menu-item fa fa-cog"></a>
+    </menu>
+  
+  
+  </div>
+
 </html>
