--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <div id="circularMenu" class="circular-menu">
 
   <a class="floating-btn" onclick="document.getElementById('circularMenu').classList.toggle('active');">
-    <i class="bi bi-plus" style="font-size: 30px;position: relative;bottom: 30px;"></i>
+    <i class="bi bi-share-fill" style="font-size: 30px;position: relative;bottom: 30px;"></i>
   </a>
 
   <menu class="items-wrapper">
