--- a/testimonial.html
+++ b/testimonial.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/review.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar">
@@ -126,14 +126,14 @@
   <div id="circularMenu" class="circular-menu">
 
     <a class="floating-btn" onclick="document.getElementById('circularMenu').classList.toggle('active');">
-      <i class="fa fa-plus"></i>
+      <i class="bi bi-share-fill" style="font-size: 30px;position: relative;bottom: 30px;"></i>
     </a>
   
     <menu class="items-wrapper">
-      <a href="#" class="menu-item fa fa-facebook"></a>
-      <a href="#" class="menu-item fa fa-twitter"></a>
-      <a href="#" class="menu-item fa fa-google-plus"></a>
-      <a href="#" class="menu-item fa fa-linkedin"></a>
+      <a href="#" class="menu-item bi bi-facebook"></a>
+      <a href="#" class="menu-item bi bi-twitter"></a>
+      <a href="#" class="menu-item bi bi-linkedin"></a>
+      <a href="#" class="menu-item bi bi-github"></a>
     </menu>
   
   </div>
@@ -142,16 +142,15 @@
   <div id="circularMenu1" class="circular-menu circular-menu-left active">
   
     <a class="floating-btn" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
-      <i class="fa fa-bars"></i>
+      <i class="bi bi-list" style="font-size: 30px;position: relative;bottom: 30px;"></i>
     </a>
   
     <menu class="items-wrapper">
-      <a href="quote.html" class="menu-item fa fa-home"></a>
-      <a href="contact.html" class="menu-item fa fa-user"></a>
-      <a href="index.html#service" class="menu-item fa fa-pie-chart"></a>
-      <a href="index.html#about" class="menu-item fa fa-cog"></a>
+      <a href="quote.html" class="menu-item bi bi-pen"></a>
+      <a href="contact.html" class="menu-item bi bi-person-lines-fill"></a>
+      <a href="index.html#service" class="menu-item bi bi-hdd-network-fill"></a>
+      <a href="index.html#about" class="menu-item bi bi-people-fill"></a>
     </menu>
-  
   
   </div>
 
