--- a/contact.html
+++ b/contact.html
@@ -13,24 +13,22 @@
   <nav class="navbar">
     <div class="logo">
       <a href="index.html">
-        <img src="img/POVOR-removebg-preview.png" alt="unsplash image" style="width: 200px;" />
+        <img src="img/logo.png" alt="unsplash image" style="width: 200px;" />
       </a>
   </div>
 </nav>
   <header>
-    <h1>Contact Us</h1>
+    <div class="textcenter">
+        <h1 style="color: #f7f7f7;padding: 10px;">Drop Us a Mail</h1>
+      </div>
 </header>
 
 <div class="container">
   <div class="innerwrap">
   
-    <section class="section1 clearfix">
-      <div class="textcenter">
-        <span class="shtext">Contact Us</span>
-        <span class="seperator"></span>
-        <h1>Drop Us a Mail</h1>
-      </div>
-    </section>
+    <!-- <section class="section1 clearfix">
+      
+    </section> -->
   
     <section class="section2 clearfix">
       <div class="col2 column1 first">
@@ -57,7 +55,7 @@
               <input class="col2 last" name="number" type="text" placeholder="Contact Number">
             </div>
             <div class="clearfix">
-              <textarea name="textarea" name="message" id="" cols="30" rows="7">Your message here...</textarea>
+              <textarea name="textarea" name="message" id="" cols="30" rows="7" placeholder="Your message here..."></textarea>
             </div>
             <div class="clearfix"><input type="submit" value="Send"></div>
           </form>
