--- a/testimonial.html
+++ b/testimonial.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="logo">
       <a href="index.html">
-        <img src="img/POVOR-removebg-preview.png" alt="unsplash image" style="width: 200px;" />
+        <img src="img/logo.png" alt="unsplash image" style="width: 200px;" />
       </a>
   </div>
 </nav>
